# Precision

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  PCH.h  main.cpp
src/Havok/: Havok.h
